meja/tests/module_hiding_type.stderr
File "tests/module_hiding_type.meja", line 16, characters 17-20:
Error: Unbound type A.t.
